button overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ iframe {
 .navbar-collapse {
     position: relative;
     display: flex;
+    overflow: visible;
     flex-direction: column;
     align-items: center;
     transform: translateX(-50px);
